--- a/Homework2/filter/index.html
+++ b/Homework2/filter/index.html
@@ -14,9 +14,8 @@
       
   <script src="FilterBlock.js"></script>
   <script src="SortBox.js"></script>
-  <!-- <script src="VotesQuestion.js"></script>
-  <script src="VotesAnswer.js"></script> -->
-
+  <script src="FilterInput.js"></script>
+ 
 
   <script>
 
